--- a/app/views/builder/_builder-help.slim
+++ b/app/views/builder/_builder-help.slim
@@ -1,20 +1,15 @@
 #builder-help
-  label To Start:
-
-  p.help-text
-    a.help-link href="http://help.yomobi.com/Mobile/SiteBuilder" target="_blank" Help
+  .section3-heading
+    span To Start:
+    span.section3-floatright
+		  a.helplink href="http://help.yomobi.com/Mobile/SiteBuilder" target="_blank" Help
   
-  p Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
-  img.help-img.first src="/images/builder-help-drag.png"
-  .spacer
-  .or
-    table
-      tbody
-        tr
-          td
-            #l
-          td OR
-          td
-            #r
-  p Click on a widget in the Mobile Phone Emulator to enter your information.
-  img.help-img.second src="/images/builder-help-edit.png"
+  p.section3-text Drag a widget from the Mobile Website Builder into the Mobile Phone Emulator
+  .section3-img
+  	img.help-img src="/images/new_design/intro-img1.png" 	
+  .section3-or
+  	img.help-img src="/images/new_design/or-button.png" 	
+	
+  p.section3-text Click on a widget in the Mobile Phone Emulator to enter your information.
+  .section3-img
+  	img.help-img src="/images/new_design/intro-img2.png"
