--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -389,7 +389,7 @@ script.facebook-edit-area.twitter-edit-area.picasa-edit-area.flickr-edit-area(ty
   p
     a href="{{ url }}" target="_blank" {{ anchorText }}
   label Your {{ subHelpText }}*:
-  input(name="userId" type="text" value="{{ _maybe.userId }}")
+  input.edit-area1(name="userId" type="text" value="{{ _maybe.userId }}")
 
 script.custom-page-edit-area.about-us-edit-area(type="text/template")
   #jeditor-wrapper
