--- a/app/views/shared/_nav.slim
+++ b/app/views/shared/_nav.slim
@@ -1,6 +1,18 @@
-#nav
-  a href=destroy_user_session_path Sign Out
-  a href=help_url target="_blank" Help
-  a href=site_manager_path Site Manager
-  a href=account_path Account Settings
-  a href=builder_main_path Website Builder
+.topheader1
+	.companylogo1
+		a href=builder_main_path
+			img src="/images/new_design/company-innerlogo.png" width="136" height="43" border="0"
+			
+	ul.menu-ul
+		li.topmenu-li
+			a.topmenulink href=destroy_user_session_path Sign Out
+		li.topmenu-li
+			a.topmenulink href=help_url target="_blank" Help
+		li.topmenu-li
+			a.topmenulink href=site_manager_path Site Manager
+		li.topmenu-li
+			a.topmenulink href=account_path Account Settings
+		li.topmenu-li
+			a.topmenulink href=builder_main_path Website Builder
+  
+  
