--- a/app/views/builder/index_old.slim
+++ b/app/views/builder/index_old.slim
@@ -18,9 +18,13 @@
 #builder-container
   #builder
     .lfloat.emulator
-      .section2-bluegradient
-        span.section2-heading Mobile Phone Emulator
-        span.section2-text Drag a widget from the sidebar on the left into the emulator below to add it to your mobile website.
+      .title Mobile Phone Emulator
+      .title-subtext
+        a target="_blank" href="http://help.yomobi.com/Account/MobileRedirectScript" 
+          img src="/images/redirect.png"
+        a target="ymhelp" href="http://help.yomobi.com/Account/MobileRedirectScript" Click here
+        |  to learn how to auto-redirect mobile visitors from your desktop site to your mobile site.
+      .divider style="border-color:#E0E1E2;margin:0 10px 10px 0"
       #emulator-wrapper
         .loader-overlay
           .icon
@@ -32,9 +36,10 @@
             #mobile-container
               = render 'shared/mobile-render'
     .lfloat.right-content 
-      .section3-bluegradient
-        span.section3-heading Widget Editor
-        span.section3-text Click on a widget in the Mobile Phone Emulator to edit it here.
+      .title Widget Editor
+      .title-subtext
+        em Click on a widget in the Mobile Phone Emulator to edit it here.
+      .divider style="border-color:#E0E1E2;margin:0 10px 10px 10px"
       .widget-editor
         = render 'builder/builder-help'
     .clearfix
