--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -1,25 +1,19 @@
-ul
-  li.option.basic class=active?('mobile',active)
-    .icon
-    a#preview-mobile-site href=mobile_preview_path(@company.db_name) View Mobile Site
-  li.spacer
-  li.option.text class=active?('email',active)
-    .icon
-    a href=builder_email_path Email Your Followers
-  li.option.text class=active?('text',active)
-    .icon
-    a href=builder_text_path Text Your Followers
-  li.spacer
-  li.option.edit-settings
-    .icon
-    a href=builder_main_path(:anchor => 'edit-settings') General Settings
-  li.option.edit-advanced-settings
-    .icon
-    a href=builder_main_path(:anchor => 'edit-advanced-settings') Advanced Settings
-  li.option.edit-tab-bar
-    .icon
-    a href=builder_main_path(:anchor => 'edit-tab-bar') Edit Mobile Tab Bar
-  li.spacer
-  li.option.builder class=active?('builder',active)
-    .icon
-    a href=builder_main_path Mobile Website Builder
+.inner-section1
+	.functions-heading Functions
+	.section1-leftmenu
+		ul
+			li class=active?('mobile',active)
+				a#preview-mobile-site.leftmenulink href=mobile_preview_path(@company.db_name) View Mobile Site
+			li class=active?('email',active)
+				a.leftmenulink href=builder_email_path Email Your Followers
+			li class=active?('text',active)
+				a.leftmenulink href=builder_text_path Text Your Followers
+			li
+				a.leftmenulink href=builder_main_path(:anchor => 'edit-settings') General Settings
+			li
+				a.leftmenulink href=builder_main_path(:anchor => 'edit-advanced-settings') Advanced Settings
+			li.section1-li1 
+				a.leftmenulink href=builder_main_path(:anchor => 'edit-tab-bar') Edit Mobile Tab Bar
+				
+	.builder-heading class=active?('builder',active)
+		a.menubuilderlink href=builder_main_path Mobile Website Builder
