--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -6,22 +6,25 @@
   font-family: "lucida grande", tahoma, verdana, arial, sans-serif; }
 
 #jeditor-wrapper .wysiwyg {
-  width: 364px; }
+  width: 271px; }
 #jeditor-wrapper iframe {
-  width: 355px;
-  max-width: 355px; }
+  width: 269px;
+  max-width: 269px; }
 
 div.wysiwyg ul.toolbar {
   border-bottom: 0px !important; }
 
 #sidebar {
   float: left;
-  width: 210px; }
+  width: 160px;
+  padding-right: 15px; }
+  /*
   #sidebar ul {
     list-style: none;
     padding-left: 0;
     margin: 54px 0 10px 0;
     font-size: 100%; }
+    */
   #sidebar .spacer {
     border-top: 1px solid #dddddd;
     margin: 5px 0; }
@@ -93,11 +96,92 @@ div.wysiwyg ul.toolbar {
   padding-left: 2px;
   overflow: auto; }
 
+/**side menu**/
+
+.menubuilderlink {
+	background:url(../images/new_design/greybg.jpg);
+	text-align:center;
+	padding:6px;
+	font-size:13px;
+	font-weight:bold;
+	color:#ffffff;
+	text-decoration:none;
+	font-family:Arial, Helvetica, sans-serif;
+}
+.menubuilderlink:hover {
+	background:url(../images/new_design/orange-bg.jpg);
+	text-align:center;
+	padding:6px;
+	font-size:13px;
+	font-weight:bold;
+	color:#000000;
+	text-decoration:none;
+	font-family:Arial, Helvetica, sans-serif;
+}
+.innercontent-main {
+	float:left;
+	width:920px;
+	margin-left:15px;
+	margin-right:15px;
+}
+.inner-section1 {
+	float:left;
+	width:160px;
+	padding-right:15px;
+	background:url(../images/new_design/dottedline3.jpg) repeat-y right top;
+}
+.functions-heading {
+	float:left;
+	width:160px;
+	background:url(../images/new_design/function-bg.jpg);
+	text-align:center;
+	line-height:44px;
+	font-size:24px;
+	text-shadow:1px 1px #037fd1;
+	color:#FFFFFF;
+}
+.section1-leftmenu {
+	float:left;
+	width:160px;
+	margin-top:10px;
+}
+
+.section1-leftmenu ul {
+	margin:0px;
+	padding:0px;
+	list-style:url(../images/new_design/black-arrow.png);
+	padding-left:15px;
+}
+
+.section1-leftmenu ul li {
+	line-height:26px;
+	background:url(../images/new_design/dottedline1.jpg) bottom left repeat-x;
+}
+
+.section1-ul {
+	margin:0px;
+	padding:0px;
+	list-style:url(../images/new_design/black-arrow.png);
+	padding-left:15px;
+}
+.section1-li {
+	line-height:26px;
+	background:url(../images/new_design/dottedline1.jpg) bottom left repeat-x;
+}
+.section1-li1 {
+	line-height:26px;
+}
+.builder-heading {
+	float:left;
+	margin-top:10px;
+	width:160px;
+	height:29px;
+}
+/**end side menu**/
 #content {
   float: left;
-  border: 1px solid #b3b3b3;
   border-top: none;
-  width: 797px; }
+  width: 740px; }
   #content h1 {
     padding-left: 10px;
     margin: 3px 0px 3px 0px; }
@@ -127,9 +211,7 @@ div.wysiwyg ul.toolbar {
 .home-icon.invalid.deactivated .invalid-icon {
   background-image: url(/images/ui/deactivated.png); }
 
-#builder-container {
-  background: #edeff4;
-  border-top: 1px solid #b3b3b3; }
+#builder-container {}
 
 #builder .left > .title, #builder .right > .title {
   padding: 10px 0 10px 0;
@@ -140,7 +222,7 @@ div.wysiwyg ul.toolbar {
   height: 30px;
   padding: 0 10px 5px 0; }
 #builder .left {
-  width: 390px;
+  width: 395px;
   height: 100%;
   border-right: 1px solid #b3b3b3;
   padding: 0 0 10px 10px; }
@@ -154,7 +236,7 @@ div.wysiwyg ul.toolbar {
       float: left;
       margin: 2px 6px 0 0; }
 #builder .right {
-  width: 396px;
+  width: 304px;
   height: 100%; }
   #builder .right > .title {
     padding: 10px 15px 10px; }
@@ -164,7 +246,8 @@ div.wysiwyg ul.toolbar {
     padding-left: 14px; }
 
 #builder-help {
-  color: #203360; }
+  	float:left;
+		width:274px; }
   #builder-help label {
     font-weight: bold;
     font-size: 18px;
@@ -174,8 +257,7 @@ div.wysiwyg ul.toolbar {
     margin-bottom: 20px; }
   #builder-help p {
     margin-bottom: 5px; }
-  #builder-help img {
-    border: 2px solid #203360; }
+
   #builder-help .first {
     margin-left: -2px; }
   #builder-help .or {
@@ -195,9 +277,13 @@ div.wysiwyg ul.toolbar {
       margin-left: 3px; }
 
 #builder .widget-editor {
-  width: 376px;
-  padding: 0px;
-  margin: 0 auto; }
+	float:left;
+	width:274px;
+	padding:15px;
+	background:-moz-linear-gradient(top, #fef1d0 0%, #ffffff 100%);
+	border:1px solid #ffc66e;
+	border-radius:4px; }
+  
   #builder .widget-editor .header {
     height: 55px;
     margin: 0 auto;
@@ -292,8 +378,8 @@ div.wysiwyg ul.toolbar {
   float: left;
   width: 366px;
   margin-left: -5px;
-  padding: 79px 0 64px 26px;
-  background: no-repeat url(/images/phone.png); }
+  padding: 79px 0 100px 26px;
+  background: no-repeat url(/images/new_design/mobile-bg.png); }
 
 #emulator {
   position: relative;
@@ -307,14 +393,18 @@ div.wysiwyg ul.toolbar {
 
 #emulator.portrait {
   width: 335px;
-  min-height: 480px; }
+  min-height: 480px;
+  margin-left: 2px;
+  margin-top: 13px;	 }
 
 #builder .loader-overlay {
   position: absolute;
   z-index: 99;
-  width: 324px;
-  height: 488px;
+  width: 326px;
+  height: 482px;
+  margin-top: 13px;
   background: url(/images/ui/overlay.png); }
+  
   #builder .loader-overlay .icon {
     width: 64px;
     height: 64px;
@@ -363,11 +453,11 @@ div.wysiwyg ul.toolbar {
     padding: 8px; }
     #builder .edit-area.edit-settings .box input[type=text],
     #builder .edit-area.edit-advanced-settings .box input[type=text] {
-      width: 274px;
+      width: 245px;
       margin-bottom: 5px; }
     #builder .edit-area.edit-settings .box textarea,
     #builder .edit-area.edit-advanced-settings .box textarea {
-      width: 326px;
+      width: 245px;
       margin: 0; }
   #builder .edit-area.edit-settings .divider,
   #builder .edit-area.edit-advanced-settings .divider {
@@ -771,3 +861,111 @@ button[disabled] {
 button[name=pick_files] {
   cursor: pointer;
   padding: 1px 3px 1px 3px; }
+  
+  
+/*******main content*******/
+
+.emulator {
+	width:395px;
+	padding-right:15px;
+	padding-left:15px;
+	background:url(../images/new_design/dottedline3.jpg) right top repeat-y;
+}
+
+.right-content {
+	width:300px;
+	margin-left:15px;
+}
+
+
+.section2-bluegradient {
+	float:left;
+	width:365px;
+	padding:15px;
+	background:-moz-linear-gradient(top, #e5f5ff 0%, #ffffff 100%);
+}
+.section2-heading {
+	float:left;
+	width:365px;
+	font-size:18px;
+	font-weight:bold;
+	text-transform:uppercase;
+	color:#000000;
+}
+.section2-text {
+	float:left;
+	width:365px;
+	color:#5f6366;
+	font-size:12px;
+	text-align:left;
+	margin-top:10px;
+}
+
+.section3-bluegradient {
+	float:left;
+	width:274px;
+	padding:15px;
+	background:-moz-linear-gradient(top, #e5f5ff 0%, #ffffff 100%);
+}
+
+.section3-heading {
+	float:left;
+	width:274px;
+	font-size:18px;
+	font-weight:bold;
+	text-transform:uppercase;
+	color:#000000;
+}
+.section3-text {
+	float:left;
+	width:274px;
+	color:#5f6366;
+	font-size:12px;
+	text-align:left;
+	margin-top:10px;
+}
+
+.section2-mobilebg {
+	float:left;
+	width:395px;
+	background:url(../images/new_design/mobile-bg.png) no-repeat;
+	height:683px;
+}
+.section2-iframe {
+	float:left;
+	width:340px;
+	height:482px;
+	margin-left:28px;
+	margin-top:90px;
+}
+
+.section3-img {
+	float:left;
+	width:274px;
+	margin-top:10px;
+}
+.section3-or {
+	float:left;
+	width:274px;
+	text-align:center;
+	margin-top:10px;
+}
+
+.helplink {
+	font-size:12px;
+	color:#0099ff;
+	text-decoration:underline;
+}
+.helplink:hover {
+	font-size:12px;
+	color:#0099ff;
+	text-decoration:none;
+}
+.section3-floatright {
+	float:right;
+}
+
+/*************/  
+.edit-area1{
+	width: 265px !important;
+}
