--- a/app/views/registrations/new.slim
+++ b/app/views/registrations/new.slim
@@ -1,18 +1,25 @@
-#signin-box.center-box
-  
-  h2 YoMobi Signup
+.pagecorner
+	img src="/images/new_design/page-corner.png"
+.main-whitebg
+  .innercontent-main
+    .section5-main
+      .section4-bluegradient
 
-  - if @user.errors.present?
-    .login-error
-      h3 There was problem with your request:
-      ul
-        - @user.errors.each do |name,reason|
-          li = "#{name.to_s.humanize.capitalize} #{reason}"
-      p
-        | Already a Member? 
-        a href=session_path(:user) Click here to sign in
-  
-  #actual-signin-box.signup-error
-    = render :partial => 'home/signup_form', :locals => {:hide_captcha => false}
-    .clearfix
-  .clearfix
+				#signin-box.center-box
+		
+					h2 YoMobi Signup
+
+					- if @user.errors.present?
+						.login-error
+							h3 There was problem with your request:
+							ul
+								- @user.errors.each do |name,reason|
+								  li = "#{name.to_s.humanize.capitalize} #{reason}"
+							p
+								| Already a Member? 
+								a href=session_path(:user) Click here to sign in
+		
+					#actual-signin-box.signup-error
+						= render :partial => 'home/signup_form', :locals => {:hide_captcha => false}
+						.clearfix
+					.clearfix
