--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -303,7 +303,7 @@ p.success {
   border: 1px solid #b3b3b3;
   padding: 10px 2px 10px 10px;
   margin: 10px 0px 10px 0px;
-  width: 220px !important; }
+  width: 240px !important; }
   #recaptcha_container #recaptcha_label {
     white-space: nowrap; }
   #recaptcha_container a {
@@ -633,3 +633,14 @@ label.help {
 	border:1px solid #7bc9fd;
 	box-shadow:1px 1px #d7d7d7;
 }
+
+#actual-signin-box input {
+	width: 445px;
+	height: 30px;
+}
+
+.center-box input {
+	width: 445px;
+	height: 30px;
+}
+
