--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -19,7 +19,7 @@ body {
 .menulink {
 	color:#FFFFFF;
 	text-transform:uppercase;
-	font-size:16px;
+	font-size:15px;
 	text-decoration:none;
 	line-height:32px;
 	padding-top:6px;
@@ -32,7 +32,7 @@ body {
 .menulink:hover {
 	color:#FFFFFF;
 	text-transform:uppercase;
-	font-size:16px;
+	font-size:15px;
 	text-decoration:none;
 	line-height:32px;
 	padding-top:6px;
@@ -87,14 +87,16 @@ body {
 }
 .signin-field {
 	background:url(../images/new_design/textfield-bg.png);
-	width:120px;
+	width:120px !important; 
 	height:21px;
-	border:none;
-	padding-left:5px;
+	border:none !important;
+	padding:0px !important;
+		
+	margin-bottom: 0px !important;
 	color:#ffba00;
 }
 .signin-whitetext {
-	font-size:11px;
+	font-size:9px;
 	text-transform:uppercase;
 	text-align:left;
 	text-shadow:1px 1px 1px #d88202;
@@ -231,7 +233,7 @@ body {
 .content-text2{
     float:left;
 	margin-left:10px;
-	margin-top:15px;
+	margin-top:3px;
 	text-align:left;
 	font-size:14px;
 }
