--- a/app/views/home/why_mobile.html
+++ b/app/views/home/why_mobile.html
@@ -4,8 +4,8 @@
 <h1>Having a mobile-optimized site is important.<h1>
 <h2>When you don't have a mobile site:</h2>
 <ul>
-<li><span class="hilite">You frustrate existing customers and lose revenue.</span></li>
-<li><span class="hilite">You new customer reach shrinks</span> because more people browse the web on their phones.</li>
+<li><span class="hilite">Existing customers are frustrated and you lose revenue opportunity.</span></li>
+<li><span class="hilite">Your new customer reach shrinks</span> because more people browse the web on their phones.</li>
 <li><span class="hilite">40% of your mobile vistors will turn to your competitor</span> after a bad mobile experience.</li>
 <li><span class="hilite">57% of your customers won't recommend you</span> if you have a bad mobile site.</li>
 </ul>
