--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -136,14 +136,17 @@
             input type="text" value="{{ url }}" name="site[url]"
           .clearfix
 
+        br
+        br
+        input type="radio" name="create_type" value="type" checked="checked" New Site
+        input type="radio" name="create_type" value="source" Copy Site
+
         .site-type
           h3 Site Type:
           | <% if (errors.type) { %>
           p.error Invalid site type.
           | <% } %>
           = select :site, :type, options_for_select(company_types, 57)
-          br
-          a.select-source href="#" Copy from Site Instead
 
         .site-source.hide
           h3 Copy Site:
@@ -152,8 +155,6 @@
             | <% for (var i=0; i < sites.length; i++) { %>
             option value="{{ sites[i].url }}" [/{{ sites[i].url }}] {{ sites[i].name }}
             | <% } %>
-          br
-          a.select-type href="#" Create New Site Instead
 
       .loading
         h3 Submitting...
